--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -24,8 +24,8 @@ background-color: #3e3e42;
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>211</width>
-      <height>601</height>
+      <width>210</width>
+      <height>600</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -50,7 +50,7 @@ QPushButton:pressed {
     background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(30, 30, 33, 255), stop:1 rgba(30, 30, 33, 255));
 }</string>
     </property>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>0</x>
@@ -189,12 +189,85 @@ outline: none;
    <widget class="QWidget" name="page" native="true">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>210</x>
       <y>0</y>
-      <width>681</width>
-      <height>601</height>
+      <width>690</width>
+      <height>600</height>
      </rect>
     </property>
+    <widget class="QStackedWidget" name="stackedPages">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>691</width>
+       <height>601</height>
+      </rect>
+     </property>
+     <property name="currentIndex">
+      <number>2</number>
+     </property>
+     <widget class="QWidget" name="homePage">
+      <widget class="QLabel" name="label">
+       <property name="geometry">
+        <rect>
+         <x>300</x>
+         <y>260</y>
+         <width>91</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>HomePage</string>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QWidget" name="aboutPage">
+      <widget class="QLabel" name="label_2">
+       <property name="geometry">
+        <rect>
+         <x>290</x>
+         <y>280</y>
+         <width>121</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>About Page</string>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QWidget" name="settingsPage">
+      <widget class="QLabel" name="label_4">
+       <property name="geometry">
+        <rect>
+         <x>270</x>
+         <y>280</y>
+         <width>171</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Settings Page</string>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QWidget" name="copyPage">
+      <widget class="QLabel" name="label_3">
+       <property name="geometry">
+        <rect>
+         <x>270</x>
+         <y>270</y>
+         <width>91</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Copy Page</string>
+       </property>
+      </widget>
+     </widget>
+    </widget>
    </widget>
   </widget>
  </widget>
